<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/programiranjeI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/gameName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tezinaKvizaText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tezinaKvizaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="109dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Tezina"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tezina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/tezina"
        android:layout_width="122dp"
        android:layout_height="136dp"
        android:layout_marginStart="53dp"
        app:layout_constraintBottom_toTopOf="@+id/brojPitanjaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tezinaKvizaText">

        <RadioButton
            android:id="@+id/lako"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/Lako"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tezinaKvizaText" />

        <RadioButton
            android:id="@+id/srednje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/Srednje" />

        <RadioButton
            android:id="@+id/tesko"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="260dp"
            android:text="@string/Tesko" />
    </RadioGroup>

    <TextView
        android:id="@+id/brojPitanjaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/brojPitanja"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tezina" />

    <RadioGroup
        android:id="@+id/brojPitanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintEnd_toEndOf="@+id/brojPitanjaText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brojPitanjaText">

        <RadioButton
            android:id="@+id/pet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/Pet"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/programiranjeI"
            app:layout_constraintStart_toStartOf="@+id/tesko"
            app:layout_constraintTop_toBottomOf="@+id/brojPitanjaText" />

        <RadioButton
            android:id="@+id/deset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/Deset"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/pet"
            app:layout_constraintTop_toBottomOf="@+id/pet" />

        <RadioButton
            android:id="@+id/petnaest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="11dp"
            android:text="@string/Petnaest"
            android:textSize="14sp" />
    </RadioGroup>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/Start"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brojPitanja" />

</androidx.constraintlayout.widget.ConstraintLayout>